<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joshdoucet.snapandsave.activities.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <!--Column1 Description-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/id_desc_view"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/id_title"
                    android:textSize="@dimen/text_name_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/description_title"
                    android:textSize="@dimen/text_name_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/price_title"
                    android:textSize="@dimen/text_name_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/supplier_title"
                    android:textSize="@dimen/text_name_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/text_height"
                    android:layout_margin="@dimen/margin_small"
                    android:text="@string/current_quantity_title"
                    android:textSize="@dimen/text_name_size" />

            </LinearLayout>

            <!--Column 2 Editable-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/id_value_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_height"
                    android:layout_margin="@dimen/margin_small"
                    android:textSize="@dimen/text_medium_size"
                    tools:text="@string/sample_num" />

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/required_field"
                    android:inputType="textAutoComplete"
                    android:maxLength="35" />

                <EditText
                    android:id="@+id/edit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/required_field"
                    android:inputType="numberDecimal"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/edit_supplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/optional_field"
                    android:inputType="textAutoComplete"
                    android:maxLength="35" />

                <TextView
                    android:id="@+id/quantity_value"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:textSize="@dimen/text_medium_size"
                    tools:text="@string/sample_num" />

                <EditText
                    android:id="@+id/edit_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/required_field"
                    android:inputType="number"
                    android:maxLength="7" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button_sale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:onClick="trackSale"
            android:text="@string/button_track_sale" />

        <Button
            android:id="@+id/button_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:onClick="receiveOrder"
            android:text="@string/button_track_shippment" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:onClick="orderItem"
            android:text="@string/button_order_more" />

        <Button
            android:id="@+id/button_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:onClick="captureImage"
            android:text="@string/button_add_image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:layout_margin="@dimen/margin_medium"
            android:scaleType="centerCrop"/>

    </LinearLayout>

</ScrollView>
