<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joshdoucet.snapandsave.activities.InventoryActivity">

    <TextView
        android:id="@+id/value_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total_value"/>

    <TextView
        android:layout_below="@id/value_header"
        android:id="@+id/value_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:gravity="center" />

    <LinearLayout
        android:layout_below="@id/value_total"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/padding_small"
            android:textSize="@dimen/text_name_size"
            android:textStyle="bold"
            android:text="@string/description_title" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="@dimen/text_name_size"
            android:layout_gravity="center_vertical"
            android:gravity="end"
            android:padding="@dimen/padding_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:text="@string/price_title" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textSize="@dimen/text_name_size"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/padding_small"
            android:text="@string/current_quantity_title" />

    </LinearLayout>

    <ListView
        android:layout_below="@id/header"
        android:id="@+id/inventory_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_margin="@dimen/margin_medium"
        android:textSize="@dimen/text_medium_size"
        android:text="@string/empty_view"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_margin="@dimen/margin_medium"
        android:id="@+id/add_fab"
        android:layout_height="@dimen/fab_size"
        android:layout_width="@dimen/fab_size"
        app:srcCompat="@drawable/ic_add_black_24dp"
        android:tint="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
